syntax = "proto3";

package smartwater;

service Sensor {
    rpc SendData(SensorData) returns (DataResponse) {}
}

service Monitoring {
    rpc GetWaterQuality(GetWaterQualityRequest) returns (WaterQualityResponse) {}
}

service DataStorage {
    rpc StoreData(SensorData) returns (DataResponse) {}
    rpc RetrieveData(RetrieveDataRequest) returns (RetrieveDataResponse) {}
}

message SensorData {
    string sensor_id = 1;
    float water_quality = 2;
}

message DataResponse {
    bool success = 1;
    string message = 2;
}

message GetWaterQualityRequest {}

message WaterQualityResponse {
    float water_quality = 1;
}

message RetrieveDataRequest {}

message RetrieveDataResponse {
    repeated SensorData data = 1;
}
